# smart-schedule-app.v2

./: README.md  app.py  data_processor.py  data_processor_new.py  database_manager.py  demo_app.py  fitness_evaluator.py  forecasting.py  generate_test_data.py  genetic_algorithm.py  load_data_to_db.py  pyproject.toml  replit.md  requirements.txt  schedule_generator.py  test_app.py  test_cabinets.csv  test_data_processor.py  test_doctors.csv  test_promo.csv  test_revenue.csv  test_seasonal.csv  utils.py  visualization.py  Полное описание  работы алгоритма с исправленноой ошибкой в примере_1759755864531.docx  Структура данных для составления динамического расписания врачей_1759756400921.xlsx
test_data/: appointments.csv  cabinets.csv  doctors.csv  revenue.csv
