[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deap>=1.4.3",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "prophet>=1.1.7",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
]
